Bug 302691 - unticking unfocused function doesn't hide its graph
Summary: unticking unfocused function doesn't hide its graph
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
: 327558 400445 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-28 11:03 UTC by Marco Mattiolo
Modified: 2018-11-05 14:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch to select the function when we click on the checkbox (2.35 KB, patch)
2016-07-18 20:42 UTC, Mario Bensi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Mattiolo 2012-06-28 11:03:11 UTC
From the "about" window:
KmPlot
Versione 1.2.1
Con piattaforma di sviluppo KDE 4.8.3 (4.8.3) 

Steps to reproduce:
1. plot (at least) two functions
2. untick (intended to hide its graph) the one which isn't selected (i.e. not blue backgrounded), the relative graph isn't hided
3. select the unticked function, it gets highligthed (with blue background), but it gets ticked
4. untick the now selected function, its graph gets hided

Expected result:
unticking a function gets its graph hided, no matter which function is selected

Thank you for maintaining kmplot, it's a really useful program.

Reproducible: Always
Comment 1 Christoph Feck 2013-11-14 03:12:25 UTC
*** Bug 327558 has been marked as a duplicate of this bug. ***
Comment 2 Mario Bensi 2016-07-18 20:42:27 UTC
Created attachment 100159 [details]
patch to select the function when we click on the checkbox

It's a workaround to hide/show a function when the function is not the current item. A disadvantage of this patch is that change the current selection.
Comment 3 Christoph Feck 2018-10-29 20:27:57 UTC
*** Bug 400445 has been marked as a duplicate of this bug. ***
Comment 4 Yuri Chornoivan 2018-11-05 14:03:11 UTC
Git commit 17c6978f38b0a5008cf81aed457c75cfc49f7a8c by Yuri Chornoivan.
Committed on 05/11/2018 at 14:02.
Pushed by yurchor into branch 'master'.

Allow hide/show unfocused items in the function list

Reworked patch by Mario Bensi

Differential Revision: https://phabricator.kde.org/D16629

M  +18   -1    kmplot/functioneditor.cpp
M  +4    -0    kmplot/functioneditor.h

https://commits.kde.org/kmplot/17c6978f38b0a5008cf81aed457c75cfc49f7a8c