Allow hide/show unfocused items in the function list

Reworked patch by Mario Bensi

BUG: 302691

Differential Revision: https://phabricator.kde.org/D16629